# introduction_in_programming

algosi_1/: README.md  eratosfen.c  last_pair.c  otreski.c
algosi_1/eratosfen/: .gitignore  CMakeLists.txt  README.md  benchmark_eratosfen.cpp  eratosfen.cpp  eratosfen.hpp  parser_and_graph.py  testing_eratosfen.cpp
algosi_1/eratosfen/RSA/: RSA.cpp  RSA.hpp  main.cpp
algosi_1/eratosfen/benchmarking/: benchmark_eratosfen.cpp
algosi_1/eratosfen/build_folder/: CMakeCache.txt  Makefile  bench.txt  benchmarking_eratosfen  cmake_install.cmake  eratosfen  testing_eratosfen
algosi_1/eratosfen/src/: eratosfen.cpp  eratosfen.hpp
algosi_1/eratosfen/testing/: testing_eratosfen.cpp
algosi_1/last_pair/: last_pair.c
algosi_1/otreski/: otreski.c
algosi_1/prime_numbers_contest/: 12_test_Ferma.c  primefib.c
algosi_2/fast_set/: CMakeLists.txt  README.md
algosi_2/fast_set/src/: fast_set.cpp  fast_set.hpp
algosi_2/fast_set/tasks/: diff.cpp  substrings.cpp
algosi_2/simmetrical_difference/src/: fast_set.cpp
algosi_2/simmetrical_difference/tasks/: diff.cpp
